--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nest-js-project",
+  "name": "time-tracker-app-backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -26,10 +26,11 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "dotenv": "^16.4.5",
-    "mysql": "^2.18.1",
-    "mysql8": "^2.17.3",
+    "formidable": "^3.5.1",
+    "mysql2": "^3.9.7",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "superagent": "^9.0.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
@@ -48,7 +49,7 @@
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
